Process non-ASCII access keys correctly. Bug 255696, r+sr=roc, a=asa